# voting-protocol-acns

./: .env  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml
api/: main.py
compile-flint/: Makefile  Makefile2
desktop/: json_file.py  main.py
desktop/pages/: VotingPage.py  login.py  main_page.py  registration.py
lbvs-lib/: .gitignore  LICENSE.txt  README.md  pyproject.toml
lbvs-lib/src/lbvs_lib/: __about__.py  __init__.py  classes.py  cleanup.py  commitment_scheme.py  compile.py  encryption_scheme.py  logger.py  players.py  primitives.py  protocol_bench.py  protocol_lin.py  protocol_sum.py  return_code_table.py  scheme_algorithms.py  scheme_algorithms_bench.py  serializers.py  serializers2.py  shuffle.py  utils.py  vericrypt.py
lbvs-lib/tests/: __init__.py  test_equality.py  test_lbvs.py
players-api/: .gitignore  README.md  app.py  classes.py  env.py  main.py  requirements.txt
players-api/db/: auditor.py  common.py  engine.py  phone.py  return_code_server.py  shuffle_server.py  voter.py
players-api/players/: auditor.py  phone.py  return_code_server.py  shuffle_server.py  voter.py
